# career_management_system

./: README.md  pyproject.toml  requirements.txt
career_management_system/: HashService.py  SQL_Prompt.py  app.py  dbService.py  pdf_processor.py  resume_search.py  sql_generation_llm.py
